# tabularx

./: .gitignore  README.md  pyproject.toml
tabularx/: __init__.py  baselines.py  config.py  embeddings.py  utils.py
tabularx/models/: __init__.py  adapters.py  batching.py  mlp.py  resnet.py  tabm.py  transformer.py
