[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabularx"
version = "0.1.0"
description = "Reference PyTorch implementation of TabM, TabM-mini, MLP, and tabular ResNet models"
readme = "README.md"
authors = [{name = "Suraj Yerramilli"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "typing_extensions>=4.8",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]
notebook = [
    "lightning>=2.4",
    "notebook>=7.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
